NTR: add plugin config tests to pipelines

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -14,6 +14,23 @@ on:
 
 jobs:
 
+  config:
+    name: Test Plugin Configuration
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone Code
+        uses: actions/checkout@v3
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.4
+
+      - name: Test configuration
+        run: make configcheck -B
+
+  # ------------------------------------------------------------------------------------------------------------------------
+
   install:
     name: Install Dependencies
     runs-on: ubuntu-latest
