--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ src/Resources/public/administration/js/
 /tests/Cypress/Cypress.env.json
 /tests/Cypress/cypress/results
 /src/Resources/app/administration/.stryker-tmp
+/.phpunuhi/
