--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
         "mollie/mollie-api-php": "2.40.1"
     },
     "require-dev": {
-      "boxblinkracer/phpunuhi": "^0.6.0",
+        "boxblinkracer/phpunuhi": "dev-main",
         "phpunit/phpunit": "^9.5",
         "phpstan/phpstan": "1.8.2",
         "friendsofphp/php-cs-fixer": "^2.18",
