NTR: add Shopware 6.4.19.0 to pipelines

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -332,7 +332,7 @@ jobs:
       - name: Build Plugin
         uses: ./.github/actions/build-plugin
         with:
-          shopware: 6.4.18.0
+          shopware: 6.4.19.0
 
   e2e:
     name: E2E | Shopware ${{ matrix.shopware }}, PHP ${{ matrix.php }}
@@ -342,6 +342,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.4.19.0'
+            php: '8.2'
           - shopware: '6.4.18.0'
             php: '8.2'
           - shopware: '6.4.17.2'
