--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
     },
     "require": {
         "ext-curl": "*",
-        "mollie/mollie-api-php": "2.40.1"
+        "mollie/mollie-api-php": "2.40.1",
+        "composer-runtime-api": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
