--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -342,6 +342,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.4.20.0'
+            php: '8.2'
           - shopware: '6.4.19.0'
             php: '8.2'
           - shopware: '6.4.18.0'
