--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ src/Resources/public/administration/js/
 /tests/Cypress/cypress/results
 /src/Resources/app/administration/.stryker-tmp
 /.phpunuhi/
+/src/Resources/public/static
