--- a/.github/workflows/compatibility_pipe.yml
+++ b/.github/workflows/compatibility_pipe.yml
@@ -20,6 +20,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - plugin: '3.6.0'
+            url: 'https://github.com/mollie/Shopware6/releases/download/v3.6.0/MolliePayments-v3.6.0.zip'
+          - plugin: '3.5.0'
+            url: 'https://github.com/mollie/Shopware6/releases/download/v3.5.0/MolliePayments-v3.5.0.zip'
           - plugin: '3.4.0'
             url: 'https://github.com/mollie/Shopware6/releases/download/v3.4.0/MolliePayments-v3.4.0.zip'
           - plugin: '3.3.0'
