--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -323,7 +323,7 @@ jobs:
       - name: Build Plugin
         uses: ./.github/actions/build-plugin
         with:
-          shopware: 6.4.19.0
+          shopware: 6.4.20.1
 
   # ------------------------------------------------------------------------------------------------------------------------
 
@@ -334,7 +334,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shopware: [ '6.4.17.0', '6.4.16.0', '6.4.15.0', '6.4.9.0', '6.4.8.2', '6.4.0.0', '6.3.5.0' ]
+        shopware: [ '6.4.20.0', '6.4.17.0', '6.4.16.0', '6.4.15.0', '6.4.9.0', '6.4.8.2', '6.4.0.0', '6.3.5.0' ]
     steps:
 
       - name: Clone Code
@@ -368,7 +368,7 @@ jobs:
       matrix:
         include:
           # latest Shopware
-          - shopware: '6.4.19.0'
+          - shopware: '6.4.20.1'
             php: '8.2'
           # in between, 6.4.7.0 was a "breaker"
           - shopware: '6.4.7.0'
