--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "author": "Mollie B.V.",
-    "dependencies": {},
+    "dependencies": {
+        "shopware-storefront-sdk": "^0.0.2"
+    },
     "devDependencies": {
         "@babel/cli": "^7.5.5",
         "@babel/core": "^7.5.5",
@@ -11,13 +13,13 @@
         "@babel/plugin-transform-runtime": "^7.15.0",
         "@babel/preset-env": "^7.15.6",
         "@babel/runtime": "^7.15.4",
-        "babel-jest": "^27.1.1",
         "@stryker-mutator/core": "^6.3.0",
         "@stryker-mutator/jest-runner": "^6.3.0",
+        "babel-eslint": "10.0.2",
+        "babel-jest": "^27.1.1",
         "babel-plugin-transform-flow-interface-imports": "^1.0.1",
         "babel-preset-env": "^1.7.0",
         "eslint": "^7.32.0",
-        "babel-eslint": "10.0.2",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-node": "^11.1.0",
