--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -45,7 +45,7 @@ runs:
     - name: Download ZIP File
       shell: bash
       run: |
-        docker cp shop:/var/www/html/MolliePayments.zip ~/.build/MolliePayments.zip
+        docker cp shop:/var/www/html/custom/plugins/.build/MolliePayments.zip ~/.build/MolliePayments.zip
 
     - name: Store ZIP file in Github
       uses: actions/upload-artifact@v2
