NTR: improve build pipeline

--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -26,6 +26,7 @@ runs:
     - name: Build Plugin
       shell: bash
       run: |
+        export NODE_OPTIONS=--openssl-legacy-provider
         cd $(pwd)/../html/custom/plugins/MolliePayments && make release
 
     # --------------------------------------------------------------------------------------------------------------------------------------
