--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -13,7 +13,7 @@ runs:
     - name: Start Docker
       shell: bash
       run: |
-        docker run --rm --name shop --env NODE_VERSION=16 -d dockware/dev:6.5.0.0
+        docker run --rm --name shop --env NODE_VERSION=18 --env PHP_VERSION=8.1 -d dockware/dev:6.5.0.0
         sleep 20
         docker logs shop
 
