--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -38,6 +38,7 @@ runs:
     - name: Build Plugin
       shell: bash
       run: |
+        docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make install'
         docker exec shop bash -c 'cd /var/www/html && php bin/console plugin:refresh'
         docker exec shop bash -c 'cd /var/www/html && php bin/console plugin:install MolliePayments --activate'
         docker exec shop bash -c 'cd /var/www/html && php bin/console cache:clear'
