--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -25,10 +25,10 @@ runs:
 
     # --------------------------------------------------------------------------------------------------------------------------------------
 
-    #- name: Install Shopware CLI
-    #  shell: bash
-    #  run: |
-    #    docker exec shop bash -c 'sudo curl -1sLf 'https://dl.cloudsmith.io/public/friendsofshopware/stable/setup.deb.sh' | sudo -E bash && sudo apt install shopware-cli'
+    - name: Install Shopware CLI
+      shell: bash
+      run: |
+        docker exec shop bash -c 'sudo curl -1sLf 'https://dl.cloudsmith.io/public/friendsofshopware/stable/setup.deb.sh' | sudo -E bash && sudo apt install shopware-cli'
 
     - name: Build Plugin
       shell: bash
