--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -30,13 +30,17 @@ runs:
       run: |
         docker exec shop bash -c 'sudo curl -1sLf 'https://dl.cloudsmith.io/public/friendsofshopware/stable/setup.deb.sh' | sudo -E bash && sudo apt install shopware-cli'
 
-    - name: Build Plugin
+    - name: Install Plugin
       shell: bash
       run: |
         docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make prod'
         docker exec shop bash -c 'cd /var/www/html && php bin/console plugin:refresh'
         docker exec shop bash -c 'cd /var/www/html && php bin/console plugin:install MolliePayments --activate'
         docker exec shop bash -c 'cd /var/www/html && php bin/console cache:clear'
+
+    - name: Build Plugin
+      shell: bash
+      run: |
         docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make release'
 
     # --------------------------------------------------------------------------------------------------------------------------------------
