MOL-877: skip credit card cypress on SW 6.4.0

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -346,6 +346,8 @@ jobs:
             php: '8.2'
           - shopware: '6.4.1.0'
             php: '7.4'
+          - shopware: '6.4.0.0'
+            php: '7.4'
     steps:
 
       - name: Clone Code
