--- a/src/Resources/app/storefront/makefile
+++ b/src/Resources/app/storefront/makefile
@@ -12,3 +12,4 @@ help:
 
 build: ## Builds using webpack
 	npx webpack build --config webpack.config.js
+	cd /var/www/html && php bin/console assets:install
