NTR: fix dal validate for cancelUntil

--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -130,6 +130,13 @@ runs:
 
     # --------------------------------------------------------------------------------------------------------------------------------------
 
+    - name: DAL Validate
+      shell: bash
+      run: |
+        docker exec shop bash -c 'php bin/console dal:validate'
+
+    # --------------------------------------------------------------------------------------------------------------------------------------
+
     - name: Install Cypress
       if: ${{ inputs.RUN_CYPRESS == 'true' }}
       shell: bash
