--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "config": {
         "optimize-autoloader": true,
         "allow-plugins": {
-            "infection/extension-installer": true
+            "infection/extension-installer": true,
+            "php-http/discovery": true
         }
     },
     "autoload": {
@@ -64,7 +65,7 @@
     "require": {
         "php": ">=7.4",
         "ext-curl": "*",
-        "mollie/mollie-api-php": "2.40.1"
+        "mollie/mollie-api-php": "2.61.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
