--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -340,6 +340,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.5.6.0'
+            php: '8.2'
           - shopware: '6.5.5.2'
             php: '8.2'
           - shopware: '6.4.20.2'
