--- a/.github/workflows/nightly_pipe.yml
+++ b/.github/workflows/nightly_pipe.yml
@@ -334,6 +334,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.5.6.0'
+            php: '8.2'
           - shopware: '6.5.5.2'
             php: '8.2'
           - shopware: '6.5.4.1'
