NTR: Fix make run

--- a/src/Resources/app/storefront/makefile
+++ b/src/Resources/app/storefront/makefile
@@ -6,10 +6,11 @@
 .DEFAULT_GOAL := help
 
 help:
-    @grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
+	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
 # ------------------------------------------------------------------------------------------------------------
 
 build: ## Builds using webpack
+	npm update
 	npx webpack build --config webpack.config.js
 	cd /var/www/html && php bin/console assets:install
