--- a/.github/workflows/nightly_pipe.yml
+++ b/.github/workflows/nightly_pipe.yml
@@ -334,7 +334,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - shopware: '6.6.0.0-rc4'
+          - shopware: '6.6.0.0'
             php: '8.2'
           - shopware: '6.5.8.7'
             php: '8.2'
