--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "kiener/mollie-payments-plugin",
     "description": "Mollie Payments",
-    "version": "v4.6.0",
+    "version": "v4.8.0",
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "authors": [
@@ -44,7 +44,8 @@
         "psr-4": {
             "Kiener\\MolliePayments\\": "src/",
             "Mollie\\Api\\": "vendor_manual/mollie/mollie-api-php/src/",
-            "Shopware\\Core\\": "polyfill/Shopware/Core/"
+            "Shopware\\Core\\": "polyfill/Shopware/Core/",
+            "MolliePayments\\Fixtures\\": "tests/Fixtures/"
         }
     },
     "autoload-dev": {
