--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "autoload": {
         "psr-4": {
             "Kiener\\MolliePayments\\": "src/",
-            "Mollie\\Api\\": "vendor_manual/mollie/mollie-api-php/src/"
+            "Mollie\\Api\\": "vendor_manual/mollie/mollie-api-php/src/",
+            "Shopware\\Core\\": "polyfill/Shopware/Core/"
         }
     },
     "autoload-dev": {
