NTR: Fix fixtures autoload (#753)

--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,7 @@
         "psr-4": {
             "Kiener\\MolliePayments\\": "src/",
             "Mollie\\Api\\": "vendor_manual/mollie/mollie-api-php/src/",
-            "Shopware\\Core\\": "polyfill/Shopware/Core/",
-            "MolliePayments\\Fixtures\\": "tests/Fixtures/"
+            "Shopware\\Core\\": "polyfill/Shopware/Core/"
         }
     },
     "autoload-dev": {
